--- a/Full_Arch_UWP_Autofac/Full_Arch_UWP_Autofac.csproj
+++ b/Full_Arch_UWP_Autofac/Full_Arch_UWP_Autofac.csproj
@@ -121,12 +121,20 @@
     </Compile>
     <Compile Include="Helpers\General\MyICommand.cs" />
     <Compile Include="Helpers\General\NotificationBaseHelper.cs" />
+    <Compile Include="Helpers\General\ServiceProviderExtensions.cs" />
+    <Compile Include="Helpers\Navigation\DefaultFrameProvider.cs" />
+    <Compile Include="Helpers\Navigation\IFrameProvider.cs" />
+    <Compile Include="Helpers\Navigation\INavigationService.cs" />
+    <Compile Include="Helpers\Navigation\IViewModelBinder.cs" />
+    <Compile Include="Helpers\Navigation\NavigationService.cs" />
+    <Compile Include="Helpers\Navigation\ViewModelBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShellPage.xaml.cs">
       <DependentUpon>ShellPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\MainPage_ViewModel.cs" />
     <Compile Include="ViewModels\OtherPage_ViewModel.cs" />
+    <Compile Include="ViewModels\ShellPage_ViewModel.cs" />
     <Compile Include="Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -156,6 +164,9 @@
     </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Autofac">
+      <Version>5.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.9</Version>
     </PackageReference>
@@ -178,8 +189,12 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Helpers\Navigation\" />
+    <ProjectReference Include="..\Test_Core\Test_Core.csproj">
+      <Project>{e20a5c23-9666-47d6-8f3f-adb44b1c39cb}</Project>
+      <Name>Test_Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
