--- a/Full_Arch_UWP_Autofac/Full_Arch_UWP_Autofac.csproj
+++ b/Full_Arch_UWP_Autofac/Full_Arch_UWP_Autofac.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Helpers\General\MyICommand.cs" />
     <Compile Include="Helpers\General\NotificationBaseHelper.cs" />
     <Compile Include="Helpers\General\ServiceProviderExtensions.cs" />
+    <Compile Include="Helpers\General\UWPStorageFolder.cs" />
     <Compile Include="Helpers\Navigation\DefaultFrameProvider.cs" />
     <Compile Include="Helpers\Navigation\IFrameProvider.cs" />
     <Compile Include="Helpers\Navigation\INavigationService.cs" />
@@ -179,6 +180,15 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed">
       <Version>2.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="NodaTime">
+      <Version>3.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog">
+      <Version>2.9.0</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog.Sinks.Observable">
+      <Version>2.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
